mappers with MapStruct added, Configuration for tests with MockMVC added, connection to remote MongoDB serv added
