# spring-server/src/main/java/io/javalovers/service/CommentService.java
@@ -1,0 +1,14 @@
+package io.javalovers.service;
+
+import io.javalovers.entity.CommentEntity;
+import org.springframework.data.domain.Sort;
+
+import java.util.List;
+
+public interface CommentService {
+    CommentEntity getCommentById(Long id);
+
+    List<CommentEntity> getCommentList();
+
+    CommentEntity addComment(CommentEntity comment);
+}
